syntax = "proto3";

package messages.device_log;

import "google/protobuf/timestamp.proto";

option go_package = "farm/src/proto/messages/device_log";

message GetDeviceLogRequest {
    string device_serial = 1;
    google.protobuf.Timestamp begin_time = 2;
    google.protobuf.Timestamp end_time = 3;
}

message GetDeviceLogResponse {
    repeated DeviceLog device_log = 1;
}

message DeviceLog {
    string device_serial = 1;
    google.protobuf.Timestamp datetime = 2;
    int32 humidity = 3;
    int32 temp = 4;
}